tests/ui/feature-gates/feature-gate-linkage.stderr
error[E0658]: the `linkage` attribute is experimental and not portable across platforms
  --> $DIR/feature-gate-linkage.rs:2:5
   |
LL |     #[linkage = "extern_weak"] static foo: *mut isize;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #29603 <https://github.com/crablang/crablang/issues/29603> for more information
   = help: add `#![feature(linkage)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
